tasks/target/debug/build/eyre-aeae8bd9f0a90d70/stderr
error[E0407]: method `backtrace` is not a member of trait `Error`
  --> /Users/shenjianzhuo/Desktop/subquery/indexer-coordinator/tasks/target/debug/build/eyre-aeae8bd9f0a90d70/out/probe.rs:19:9
   |
19 | /         fn backtrace(&self) -> Option<&Backtrace> {
20 | |             let backtrace = Backtrace::capture();
21 | |             match backtrace.status() {
22 | |                 BacktraceStatus::Captured | BacktraceStatus::Disabled | _ => {}
23 | |             }
24 | |             unimplemented!()
25 | |         }
   | |_________^ not a member of trait `Error`

error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/shenjianzhuo/Desktop/subquery/indexer-coordinator/tasks/target/debug/build/eyre-aeae8bd9f0a90d70/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0407, E0554.
For more information about an error, try `rustc --explain E0407`.
